fixtures/python/fallback/should_fail/dict_get_default.py
config = {}
timeout = config.get("timeout", 30)
host = config.get("host", "localhost")
